--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "next build",
     "start": "next start"
   },
-   "dependencies": {
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+  "dependencies": {
+    "next": "^15.5.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
