--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "the-qexai",
-  "version": "0.1.0",
   "private": true,
-  "homepage": "https://idofanish.github.io/the-qexai",
-  "author": "idofanish",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "serve": "npx serve -s out",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d out -b gh-pages"
+    "dev": "next dev --turbopack",
+    "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "10.4.20",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
-    "lucide-react": "^0.545.0",
-    "next": "^15.5.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "latest",
+    "next-auth": "5.0.0-beta.25",
+    "postcss": "8.5.1",
+    "postgres": "^3.4.6",
+    "react": "latest",
+    "react-dom": "latest",
     "react-masonry-css": "^1.0.16",
-    "test": "^3.3.0"
+    "tailwindcss": "3.4.17",
+    "typescript": "5.7.3",
+    "use-debounce": "^10.0.4",
+    "zod": "^3.25.17"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.14",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "gh-pages": "^6.3.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.15",
-    "typescript": "5.9.3"
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "22.10.7",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt",
+      "sharp"
+    ]
   }
 }
