--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,49 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# VS Code
+.vscode/
+launch.json
 
-# dependencies
-/node_modules
+# Node dependencies
+/node_modules/
 /.pnp
 .pnp.*
-.yarn/*
+.yarn/
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
-
-# next.js
+# Build / production
 /.next/
 /out/
-
-# production
 /build
 
-#github
-.github
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# Playwright
-node_modules/
+# Testing & reports
+/coverage/
 /test-results/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
+
+# GitHub
+.github/
+
+# OS / misc
+.DS_Store
+*.pem
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Environment
+.env*
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Vercel
+.vercel/
